Completed rest user controller
